# Socratic-Study-Mentor

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  404.html  CONTRIBUTING.md  LICENSE  README.md  TESTING.html  TODO.md  agent-install.html  architecture-c4.html  audhd-framework.html  audhd-learning-philosophy.html  autoresearch-guide.html  ci-cd-pipeline.html  cli-reference.html  code-review-plan-items.md  codebase-review-2026-04-08.html  conftest.py  content-pipeline.html  contributing.html  index.html  mcp.html  mkdocs.yml  network-bridges.html  pyproject.toml  remediation-log-2026-04-08.html  roadmap.html  session-protocol.html  setup-guide.html  sitemap.xml  socratic-engine.html  system-overview.html  tui-guide.html  voice-output.html  web-ui-guide.html
Formula/: studyctl.rb
agents/: manifest.json
architecture/: adapter-pattern-notebooklm.html  study-backlog-phase1.html  study-backlog-phase2.html  system-overview.html
artefacts/: index.html
benchmarks/: d2-providers.md  d2_acceptance.py
brainstorms/: 2026-04-02-test-harness-framework-brainstorm.html  2026-04-03-multi-agent-support-brainstorm.html  2026-04-03-study-backlog-phase1-brainstorm.html  2026-04-03-study-backlog-phase2-brainstorm.html  2026-04-03-studyctl-clean-command-brainstorm.html  2026-04-03-tmux-resurrect-compat-brainstorm.html
docs/: TESTING.md  agent-install.md  architecture-c4.md  architecture.md  artefacts.md  audhd-framework.md  audhd-learning-philosophy.md  autoresearch-guide.md  brainstorm-v1.4-features.md  cli-reference.md  codebase-review-2026-04-08.md  (+13 more)
(+111 files in other folders)
