[project]
name = "socratic-study-mentor"
version = "1.0.0"
description = "AuDHD-aware Socratic study mentor with AI session management"
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Andy Taylor"}]

[tool.uv.workspace]
members = ["packages/*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH", "RUF"]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"

[tool.pytest.ini_options]
testpaths = ["packages/agent-session-tools/tests", "tests"]
